# docs/swagger.yaml
@@ -39,6 +39,47 @@ definitions:
       id:
         type: integer
     type: object
+  dto.CreateGoalRequest:
+    properties:
+      country:
+        type: string
+      name:
+        maxLength: 64
+        minLength: 2
+        type: string
+      notes:
+        maxLength: 1000
+        type: string
+    required:
+    - country
+    - name
+    type: object
+  dto.CreateMissionRequest:
+    properties:
+      description:
+        type: string
+      goals:
+        items:
+          $ref: '#/definitions/dto.CreateGoalRequest'
+        type: array
+      status:
+        enum:
+        - planned
+        - active
+        - completed
+        type: string
+      title:
+        maxLength: 128
+        minLength: 3
+        type: string
+    required:
+    - title
+    type: object
+  dto.CreateMissionResponse:
+    properties:
+      id:
+        type: integer
+    type: object
   dto.DeleteCatResponse:
     properties:
       deleted:
@@ -260,4 +301,42 @@ paths:
       summary: Create a new spy cat
       tags:
       - cats
+  /missions:
+    post:
+      consumes:
+      - application/json
+      description: Used to create a new mission
+      parameters:
+      - description: Request to create a mission
+        in: body
+        name: CreateMissionRequest
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreateMissionRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/dto.CreateMissionResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "502":
+          description: Bad Gateway
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      summary: Create a new mission
+      tags:
+      - missions
 swagger: "2.0"
